--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 <body>
 
 <div class="topTitle">
-  <maintitle><span class="whiteText">INDUSTRY</span> <span class="yellowText">DEVS</span></maintitle>
-  <p class="whiteText" style="font-size:28px">Chatter about the gaming industry by developers.</p>
+  <maintitle><whiteText>INDUSTRY</whiteText> <yellowText>DEVS</yellowText></maintitle>
+  <p style="font-size:28px"><whiteText>Chatter about the gaming industry by developers.</whiteText></p>
 </div>
 
+<div class="padding"></div>
+
 <div class="main">
- <div><p></p></div>
+
+  <!-- GDRT -->
+  <!-- GDRT -->
   <!-- GDRT -->
   <div class="image-gallery">
     <a href="https://www.youtube.com/@IndustryDevs">
@@ -30,14 +34,16 @@
     </a>
   </div>
   
-  <div class="justify bottomPad">
+  <div class="justify">
     <p>
       <a href="https://www.youtube.com/@IndustryDevs">The Game Dev Round Table</a> is a podcast where game developers and industry experts discuss the latest happenings in gaming for developers and the gaming community.
     </p>
   </div>
 
- <div><p></p></div>
+  <div class="padding"></div>
 
+   <!-- DISCORD -->
+   <!-- DISCORD -->
    <!-- DISCORD -->
    <div class="image-gallery">
     <a href="https://discord.gg/vEvVpsa8ND">
@@ -46,39 +52,32 @@
     </a>
   </div>
   
-  <div class="justify bottomPad">
+  <div class="justify">
     <p>
       The <a href="https://discord.gg/vEvVpsa8ND">DISCORD</a> is available for all devs, industry professionals and anyone curious. Join the community to network with other developers and get to making games or just chat with other devs!
     </p>
   </div>
 
-  <!-- <div><hr><p></p></div> -->
-
-  <!-- <div>
-    <p class="findUs"><span class="whiteText">FIND</span> <span class="yellowText">US</span></p>
-  </div> -->
-
-  <!-- Youtube Embed -->
-  <!-- <div>
-    <iframe class="ytvideo" allowfullscreen src="https://www.youtube.com/embed/videoseries?si=ctIqytAffZC4G6KO&amp;list=PL-iRrPKfzxC2qS2Z5mTaKKNwufi4HaWNs"></iframe>
-  </div> -->
-
+  <div class="padding"></div>
   
   <!-- Footer -->
+  <!-- Footer -->
+  <!-- Footer -->
   <div><hr></div>
+
   <div class="centered">
     <p>
       <a href="https://discord.gg/vEvVpsa8ND" target="_blank">Discord</a> &#x00B7;
-      <a href="https://x.com/IndustryDevs" target="_blank">X</a> &#x00B7;
       <a href="https://www.youtube.com/@IndustryDevs" target="_blank">YouTube</a> &#x00B7;
-      <!-- <br> -->
       <a href="https://open.spotify.com/show/53wJt7cvRBxiIiUzd80c6g" target="_blank">Spotify</a> &#x00B7;
       <a href="https://podcasts.apple.com/us/podcast/game-dev-round-table/id1767233408" target="_blank">Apple</a> &#x00B7;
-      <a href="hhttps://www.twitch.tv/industrydevs" target="_blank">Twitch</a>
-      <!-- <a href="https://kick.com/industrydevs" target="_blank">Kick</a> -->    
-    <br>
-    © 2024 Industry Devs
-  </p>
+      <a href="https://x.com/IndustryDevs" target="_blank">X</a>
+      <!-- <a href="hhttps://www.twitch.tv/industrydevs" target="_blank">Twitch</a> -->
+      <!-- <a href="https://kick.com/industrydevs" target="_blank">Kick</a> -->   
+      <br>
+      © 2024 Industry Devs
+      <br>
+    </p>
   </div>
 </div>
 
@@ -86,3 +85,7 @@
 </html>
 
 
+ <!-- Youtube Embed -->
+  <!-- <div>
+    <iframe class="ytvideo" allowfullscreen src="https://www.youtube.com/embed/videoseries?si=ctIqytAffZC4G6KO&amp;list=PL-iRrPKfzxC2qS2Z5mTaKKNwufi4HaWNs"></iframe>
+  </div> -->
