changed footer font size

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div><hr></div>
 
   <div class="centered">
-    <p>
+    <p style="font-size:20px">
       <a href="https://discord.gg/vEvVpsa8ND" target="_blank">Discord</a> &#x00B7;
       <a href="https://www.youtube.com/@IndustryDevs" target="_blank">YouTube</a> &#x00B7;
       <a href="https://open.spotify.com/show/53wJt7cvRBxiIiUzd80c6g" target="_blank">Spotify</a> &#x00B7;
