--- a/index.html
+++ b/index.html
@@ -24,25 +24,7 @@
 
 <div class="main">
 
-  <!-- GDRT -->
-  <!-- GDRT -->
-  <!-- GDRT -->
-  <div class="image-gallery">
-    <a href="https://www.youtube.com/@IndustryDevs">
-      <img src="./images/gdrt_banner.jpg" alt="GDRT LOGO">
-      <img src="./images/gdrt_banner_mobile.jpg" alt="GDRT LOGO" class="mobile-image">
-    </a>
-  </div>
-  
-  <div class="justify">
-    <p>
-      <a href="https://www.youtube.com/@IndustryDevs">The Game Dev Round Table</a> is a podcast where game developers and industry experts discuss the latest happenings in gaming for developers and the gaming community.
-    </p>
-  </div>
-
-  <div class="padding"></div>
-
-   <!-- DISCORD -->
+  <!-- DISCORD -->
    <!-- DISCORD -->
    <!-- DISCORD -->
    <div class="image-gallery">
@@ -54,7 +36,20 @@
   
   <div class="justify">
     <p>
-      The <a href="https://discord.gg/vEvVpsa8ND">DISCORD</a> is available for all devs, industry professionals and anyone curious. Join the community to network with other developers and get to making games or just chat with other devs!
+      The <a href="https://discord.gg/vEvVpsa8ND">DISCORD</a> is available for all devs, industry professionals and anyone curious about the industry. You don't need to be a dev to join! Join the community to network with other developers and get to making games or just chat with other devs for insight into the development process.
+    </p>
+  </div>
+
+  <!-- <div class="padding"></div> -->
+
+  <!-- Youtube Embed -->
+  <div>
+    <iframe class="ytvideo" allowfullscreen src="https://www.youtube.com/embed/videoseries?si=ctIqytAffZC4G6KO&amp;list=PL-iRrPKfzxC1LvG70f2vjS3dF0uU0QR51"></iframe>
+  </div>
+
+  <div class="justify">
+    <p>
+      The <a href="https://www.youtube.com/@IndustryDevs">Industry Devs YouTube Channel</a> contains podcasts, news chatter and other videos about the games industry made by developers.
     </p>
   </div>
 
