--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
       <!-- <a href="hhttps://www.twitch.tv/industrydevs" target="_blank">Twitch</a> -->
       <!-- <a href="https://kick.com/industrydevs" target="_blank">Kick</a> -->   
       <br>
-      © 2024 Industry Devs
+
+      <span style="font-size: 18px">
+        produced by <a href="https://jackvania.com" target="_blank">Jack Vania</a> & <a href="https://x.com/GremlinGal0" target="_blank">Anna Grem</a>
+        <br>
+        © 2024 Industry Devs
+      </span>
+
       <br>
     </p>
   </div>
